# re-0-qt-app-code

./: README.md
2/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
3/: mainwindow.cpp  mainwindow.h  project.qrc
4/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  project.qrc  project.qss
5/: mainwindow.cpp  mainwindow.h
6/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  project.h.in
